--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="ru.luckycactus.steamroulette">
+<manifest
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        package="ru.luckycactus.steamroulette"
+        >
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -11,12 +13,29 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".presentation.MainActivity">
+            android:theme="@style/AppTheme"
+            >
+        <activity
+                android:name=".presentation.MainActivity"
+                android:launchMode="singleTask"
+                >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+
+                <data
+                        android:scheme="https"
+                        android:host="ru.luckycactus.steamroulette"
+                        android:pathPrefix="/signin"
+                        />
             </intent-filter>
         </activity>
     </application>
