--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:theme="@style/AppTheme"
             >
         <activity
-                android:name=".presentation.MainActivity"
+                android:name=".presentation.main.MainActivity"
                 android:launchMode="singleTask"
                 >
             <intent-filter>
