--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 
     implementation "androidx.room:room-runtime:2.1.0"
     kapt "androidx.room:room-compiler:2.1.0"
+    implementation "androidx.room:room-ktx:2.1.0"
 
-    implementation "androidx.browser:browser:1.0.0"
+    //implementation "androidx.browser:browser:1.0.0"
 }
