--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,8 @@ dependencies {
     kapt "androidx.room:room-compiler:2.1.0"
     implementation "androidx.room:room-ktx:2.1.0"
 
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
+
     //implementation "androidx.browser:browser:1.0.0"
 }
