--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,9 +71,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
 
-    //implementation "androidx.browser:browser:1.0.0"
+    implementation "androidx.browser:browser:1.0.0"
 
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
-    // If you want to use the GPU Filters
-    //implementation 'jp.co.cyberagent.android:gpuimage:2.x.x'
 }
