--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,14 @@ android {
         it.buildConfigField 'String', "STEAM_WEB_API_KEY", steamWebApiKey
         it.resValue 'string', "steam_web_api_key", steamWebApiKey
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
@@ -40,9 +48,9 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation "com.google.android.material:material:1.0.0"
-    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
@@ -54,19 +62,19 @@ dependencies {
     api "com.squareup.okhttp3:logging-interceptor:3.11.0"
 
 
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha02"
-    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-alpha02"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha02"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha02"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-beta01"
+    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-beta01"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-beta01"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-beta01"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-beta01"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.2"
 
 
-    implementation "androidx.room:room-runtime:2.1.0"
-    kapt "androidx.room:room-compiler:2.1.0"
-    implementation "androidx.room:room-ktx:2.1.0"
+    implementation "androidx.room:room-runtime:2.2.0"
+    kapt "androidx.room:room-compiler:2.2.0"
+    implementation "androidx.room:room-ktx:2.2.0"
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
