Login screen improvement

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity
                 android:name=".presentation.main.MainActivity"
                 android:launchMode="singleTask"
+                android:windowSoftInputMode="adjustResize"
                 >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
