--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,7 +85,7 @@ dependencies {
 
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
 
-    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    //implementation 'com.google.firebase:firebase-analytics:17.2.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 }
 
