--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,10 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
+def keystorePropertiesFile = rootProject.file("./keystore.properties")
+def keystoreProperties = new Properties()
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -40,6 +44,18 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
+    }
+    signingConfigs {
+        release {
+            try {
+                keyAlias keystoreProperties['keyAlias']
+                keyPassword keystoreProperties['keyPassword']
+                storeFile file(keystoreProperties['storeFile'])
+                storePassword keystoreProperties['storePassword']
+            } catch (ex) {
+                throw new InvalidUserDataException("You should define keystore.properties.")
+            }
+        }
     }
 }
 
