--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation "com.google.android.material:material:1.1.0-beta01"
+    implementation "com.google.android.material:material:1.2.0-alpha01"
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -84,19 +84,19 @@ dependencies {
     api "com.squareup.okhttp3:logging-interceptor:3.11.0"
 
 
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-beta01"
-    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-beta01"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-beta01"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-beta01"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-beta01"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-rc01"
+    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-rc01"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc01"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc01"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-rc01"
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
 
 
-    implementation "androidx.room:room-runtime:2.2.0"
-    kapt "androidx.room:room-compiler:2.2.0"
-    implementation "androidx.room:room-ktx:2.2.0"
+    implementation "androidx.room:room-runtime:2.2.1"
+    kapt "androidx.room:room-compiler:2.2.1"
+    implementation "androidx.room:room-ktx:2.2.1"
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
