--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,10 @@ dependencies {
 
     //implementation 'com.google.firebase:firebase-analytics:17.2.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+
+    implementation "com.google.dagger:dagger:2.24"
+    kapt "com.google.dagger:dagger-compiler:2.24"
+    compileOnly "javax.annotation:jsr250-api:1.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
