--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,6 +122,9 @@ dependencies {
 
     implementation 'androidx.activity:activity-ktx:1.1.0-rc01'
     implementation 'androidx.fragment:fragment-ktx:1.2.0-rc01'
+
+    implementation 'com.facebook.stetho:stetho:1.5.1'
+    debugImplementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
