--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,8 +104,9 @@ dependencies {
     kapt "androidx.room:room-compiler:2.2.1"
     implementation "androidx.room:room-ktx:2.2.1"
 
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
+    debugImplementation 'com.github.bumptech.glide:okhttp3-integration:4.10.0'
 
     implementation "androidx.browser:browser:1.0.0"
 
