--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,8 +124,9 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.1.0-rc01'
     implementation 'androidx.fragment:fragment-ktx:1.2.0-rc01'
 
-    implementation 'com.facebook.stetho:stetho:1.5.1'
+    debugImplementation 'com.facebook.stetho:stetho:1.5.1'
     debugImplementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-3'
 }
 
 apply plugin: 'com.google.gms.google-services'
