--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,7 +104,7 @@ dependencies {
     kapt "androidx.room:room-compiler:2.2.1"
     implementation "androidx.room:room-ktx:2.2.1"
 
-    implementation "androidx.paging:paging-runtime-ktx:2.1.0"
+    //implementation "androidx.paging:paging-runtime-ktx:2.1.0"
 
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
@@ -120,8 +120,8 @@ dependencies {
     implementation "com.google.dagger:dagger:2.24"
     kapt "com.google.dagger:dagger-compiler:2.24"
     compileOnly "javax.annotation:jsr250-api:1.0"
-    compileOnly 'com.squareup.inject:assisted-inject-annotations-dagger2:0.5.1'
-    kapt 'com.squareup.inject:assisted-inject-processor-dagger2:0.5.1'
+//    compileOnly 'com.squareup.inject:assisted-inject-annotations-dagger2:0.5.1'
+//    kapt 'com.squareup.inject:assisted-inject-processor-dagger2:0.5.1'
 
     implementation 'androidx.activity:activity-ktx:1.1.0-rc01'
     implementation 'androidx.fragment:fragment-ktx:1.2.0-rc01'
