--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,8 @@ android {
         applicationId "ru.luckycactus.steamroulette"
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 3
-        versionName "1.0.2"
+        versionCode 4
+        versionName "1.0.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -77,32 +77,31 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation "com.google.android.material:material:1.2.0-alpha01"
+    implementation "com.google.android.material:material:1.2.0-alpha02"
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
-    implementation "com.squareup.retrofit2:converter-gson:2.6.0"
-    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+    implementation 'com.squareup.retrofit2:retrofit:2.6.3'
+    implementation "com.squareup.retrofit2:converter-gson:2.6.3"
     api "com.squareup.okhttp3:logging-interceptor:3.11.0"
 
 
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-rc01"
-    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-rc01"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc01"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc01"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-rc01"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-rc03"
+    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-rc03"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc03"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc03"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-rc03"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
 
 
-    implementation "androidx.room:room-runtime:2.2.1"
-    kapt "androidx.room:room-compiler:2.2.1"
-    implementation "androidx.room:room-ktx:2.2.1"
+    implementation "androidx.room:room-runtime:2.2.2"
+    kapt "androidx.room:room-compiler:2.2.2"
+    implementation "androidx.room:room-ktx:2.2.2"
 
     //implementation "androidx.paging:paging-runtime-ktx:2.1.0"
 
@@ -123,12 +122,12 @@ dependencies {
 //    compileOnly 'com.squareup.inject:assisted-inject-annotations-dagger2:0.5.1'
 //    kapt 'com.squareup.inject:assisted-inject-processor-dagger2:0.5.1'
 
-    implementation 'androidx.activity:activity-ktx:1.1.0-rc01'
-    implementation 'androidx.fragment:fragment-ktx:1.2.0-rc01'
+    implementation 'androidx.activity:activity-ktx:1.1.0-rc03'
+    implementation 'androidx.fragment:fragment-ktx:1.2.0-rc03'
 
     debugImplementation 'com.facebook.stetho:stetho:1.5.1'
     debugImplementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-3'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
