--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,9 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
+    androidExtensions {
+        experimental = true
+    }
 
     kotlinOptions {
         jvmTarget = "1.8"
