--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,8 +127,8 @@ dependencies {
     implementation "com.google.dagger:dagger:2.24"
     kapt "com.google.dagger:dagger-compiler:2.24"
     compileOnly "javax.annotation:jsr250-api:1.0"
-//    compileOnly 'com.squareup.inject:assisted-inject-annotations-dagger2:0.5.1'
-//    kapt 'com.squareup.inject:assisted-inject-processor-dagger2:0.5.1'
+    compileOnly 'com.squareup.inject:assisted-inject-annotations-dagger2:0.5.2'
+    kapt 'com.squareup.inject:assisted-inject-processor-dagger2:0.5.2'
 
     implementation 'androidx.activity:activity-ktx:1.1.0-rc03'
     implementation 'androidx.fragment:fragment-ktx:1.2.0-rc03'
