--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,17 +107,15 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
 
 
-    implementation "androidx.room:room-runtime:2.2.2"
-    kapt "androidx.room:room-compiler:2.2.2"
-    implementation "androidx.room:room-ktx:2.2.2"
+    implementation "androidx.room:room-runtime:2.2.3"
+    kapt "androidx.room:room-compiler:2.2.3"
+    implementation "androidx.room:room-ktx:2.2.3"
 
-    //implementation "androidx.paging:paging-runtime-ktx:2.1.0"
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    debugImplementation 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.10.0'
-    kapt 'com.github.bumptech.glide:compiler:4.10.0'
-    debugImplementation 'com.github.bumptech.glide:okhttp3-integration:4.10.0'
-
-    implementation "androidx.browser:browser:1.0.0"
+    //implementation "androidx.browser:browser:1.2.0"
 
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
 
@@ -130,8 +128,8 @@ dependencies {
     compileOnly 'com.squareup.inject:assisted-inject-annotations-dagger2:0.5.2'
     kapt 'com.squareup.inject:assisted-inject-processor-dagger2:0.5.2'
 
-    implementation 'androidx.activity:activity-ktx:1.1.0-rc03'
-    implementation 'androidx.fragment:fragment-ktx:1.2.0-rc03'
+    implementation 'androidx.activity:activity-ktx:1.1.0-rc05'
+    implementation 'androidx.fragment:fragment-ktx:1.2.0-rc05'
 
     debugImplementation 'com.facebook.stetho:stetho:1.5.1'
     debugImplementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
