--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     implementation 'com.squareup.retrofit2:retrofit:2.6.3'
     implementation "com.squareup.retrofit2:converter-gson:2.6.3"
