--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "ru.luckycactus.steamroulette"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 5
         versionName "1.0.4"
@@ -115,6 +115,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
+    implementation 'com.github.stfalcon:stfalcon-imageviewer:1.0.0'
 
     //implementation "androidx.browser:browser:1.2.0"
 
