--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,7 +91,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     implementation 'com.squareup.retrofit2:retrofit:2.6.3'
     implementation "com.squareup.retrofit2:converter-gson:2.6.3"
@@ -130,8 +129,9 @@ dependencies {
     compileOnly 'com.squareup.inject:assisted-inject-annotations-dagger2:0.5.2'
     kapt 'com.squareup.inject:assisted-inject-processor-dagger2:0.5.2'
 
-    implementation 'androidx.activity:activity-ktx:1.1.0-rc05'
-    implementation 'androidx.fragment:fragment-ktx:1.2.0-rc05'
+    implementation "androidx.core:core-ktx:1.1.0"
+    implementation 'androidx.activity:activity-ktx:1.1.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.0'
 
     debugImplementation 'com.facebook.stetho:stetho:1.5.1'
     debugImplementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
