change cache windows to kotlin's Duration

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ android {
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions.freeCompilerArgs += ["-Xuse-experimental=kotlin.Experimental"]
+    kotlinOptions.freeCompilerArgs += ["-Xuse-experimental=kotlin.time.ExperimentalTime"]
 }
 
 dependencies {
