--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
         versionName "1.1.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -85,6 +86,7 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation "com.google.android.material:material:1.2.0-alpha04"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -93,10 +95,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //implementation group: 'androidx.transition', name: 'transition', version: '1.3.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.6.3'
-    implementation "com.squareup.retrofit2:converter-gson:2.6.3"
+    implementation 'com.squareup.retrofit2:retrofit:2.7.1'
     api "com.squareup.okhttp3:logging-interceptor:3.11.0"
-
+    implementation "com.squareup.moshi:moshi-kotlin:1.9.2"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.9.2"
+    implementation "com.squareup.retrofit2:converter-moshi:2.7.1"
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     kapt "androidx.lifecycle:lifecycle-compiler:2.2.0"
