--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,9 +105,15 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
 
 
-    implementation "androidx.room:room-runtime:2.2.4"
-    kapt "androidx.room:room-compiler:2.2.4"
-    implementation "androidx.room:room-ktx:2.2.4"
+    implementation "androidx.room:room-runtime:2.2.5"
+    kapt "androidx.room:room-compiler:2.2.5"
+    implementation "androidx.room:room-ktx:2.2.5"
+
+    implementation "androidx.paging:paging-runtime-ktx:2.1.2"
+    // alternatively - without Android dependencies for testing
+    testImplementation "androidx.paging:paging-common-ktx:2.1.2"
+
+    implementation 'androidx.recyclerview:recyclerview-selection:1.0.0'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
