--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        package="ru.luckycactus.steamroulette"
-        >
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="ru.luckycactus.steamroulette"
+    >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-            android:name=".presentation.common.App"
-            android:allowBackup="false"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="false"
-            android:theme="@style/AppTheme"
-            >
+        android:name=".presentation.common.App"
+        android:allowBackup="false"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="false"
+        android:theme="@style/AppTheme"
+        >
         <activity
-                android:name="ru.luckycactus.steamroulette.presentation.features.main.MainActivity"
-                android:launchMode="singleTask"
-                android:screenOrientation="sensorPortrait"
-                >
+            android:name="ru.luckycactus.steamroulette.presentation.features.main.MainActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,10 +33,10 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                        android:host="ru.luckycactus.steamroulette"
-                        android:pathPrefix="/signin"
-                        android:scheme="https"
-                        />
+                    android:host="ru.luckycactus.steamroulette"
+                    android:pathPrefix="/signin"
+                    android:scheme="https"
+                    />
             </intent-filter>
         </activity>
     </application>
