--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,6 +115,7 @@ dependencies {
     api "com.squareup.okhttp3:logging-interceptor:3.11.0"
     implementation "com.squareup.moshi:moshi:1.9.2"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.9.2"
+    kaptTest "com.squareup.moshi:moshi-kotlin-codegen:1.9.2"
     implementation "com.squareup.retrofit2:converter-moshi:2.8.1"
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
