--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,11 @@ android {
             option("-Xmaxerrs", 500)
         }
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
@@ -148,6 +153,7 @@ dependencies {
     testImplementation "org.robolectric:robolectric:4.3.1"
     testImplementation 'androidx.test.ext:junit:1.1.1'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.6'
+    testImplementation 'org.mockito:mockito-core:2.27.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
