--- a/app/build.gradle
+++ b/app/build.gradle
@@ -153,10 +153,7 @@ dependencies {
     testImplementation "org.robolectric:robolectric:4.3.1"
     testImplementation 'androidx.test.ext:junit:1.1.1'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.6'
-    testImplementation 'org.mockito:mockito-core:2.27.0'
-    //testImplementation "org.mockito:mockito-inline:2.27.0"
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
-    testImplementation("com.squareup.okhttp3:mockwebserver:4.7.2")
+    testImplementation "io.mockk:mockk:1.10.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
