--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,7 +128,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
     implementation 'com.github.stfalcon:stfalcon-imageviewer:1.0.0'
 
-    //implementation "androidx.browser:browser:1.2.0"
+    implementation "androidx.browser:browser:1.2.0"
 
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
 
