Migrate AppLibraries screen to Compose

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ android {
         jvmTarget = "1.8"
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.1.0-rc03'
+        kotlinCompilerExtensionVersion '1.1.0'
     }
     signingConfigs {
         release {
